--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<h1>Hello World</h1>
-	<p>I'm hosted with GitHub Pages.</p>
+	<h1>SNUSAT Project Documentation Page</h1>
+	<p>This page is for project documentation by Seoul National University Small Satellite team, SNUSAT.</p>
+	<p>For more information, please refer to <a href="http://snusat.wordpress.com">SNUSAT Blog</a>.</p>
+	<p>This page written by <a href="mailto:east0822@gamil.com">Dongho Kang</a> and <a href="mailto:gokoreas@gamil.com">Jaeyoung Lim</a>.</p><br>
+
+	<h2>ARLISS 2014</h2>
+	<p>Please refer to <a href="http://github.com/SNUSAT/SNU-ARLISS-2014">GitHub - SNUSAT/SNU-ARLISS-2014</a> for source code, CAD files etc.</p><br>
+	<li>Documentation : <a href="doc_arliss2014.html">Documentation for ARLISS 2014</a></li>
+	<br>
 </body>
 </html>
