--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 	<h2>ARLISS 2014</h2>
 	<p>Please refer to <a href="http://github.com/SNUSAT/SNU-ARLISS-2014">GitHub - SNUSAT/SNU-ARLISS-2014</a> for source code, CAD files etc.</p>
 	<ul>
-		<li>Documentation : <a href="/doc_arliss2014/doc_arliss2014.html">Documentation for ARLISS 2014</a></li>
-		<li>Photos and Videos - Flickr: 
+		<li>Documentation : 
 			<ul>
-				<li><a href="https://www.flickr.com/photos/snusatteam/sets/72157648463128444/">Flickr - SNUSAT Team - SNUSAT Activities 2014</a></li>
-				<li><a href="https://www.flickr.com/photos/snusatteam/sets/72157650385671208/">Flickr - SNUSAT Team - ARLISS 2014</a></li>
-			</ul>
-		</li>
-		<br>
-	</ul>
-</body>
-</html>
+				<li><a href="/doc_arliss2014/doc_arliss2014.html">Documentation for ARLISS 2014</a>
+				</li>
+			</li>
+			<li>Photos and Videos - Flickr : 
+				<ul>
+					<li><a href="https://www.flickr.com/photos/snusatteam/sets/72157648463128444/">Flickr - SNUSAT Team - SNUSAT Activities 2014</a></li>
+					<li><a href="https://www.flickr.com/photos/snusatteam/sets/72157650385671208/">Flickr - SNUSAT Team - ARLISS 2014</a></li>
+				</ul>
+			</li>
+			<br>
+		</ul>
+	</body>
+	</html>
