change image path
absolute path to relative path

--- a/doc_arliss2014/doc_arliss2014.html
+++ b/doc_arliss2014/doc_arliss2014.html
@@ -1015,7 +1015,7 @@ div.HStyle14
 
 <P CLASS=HStyle3>가. <SPAN STYLE='font-family:"바탕"'>Rover</SPAN></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEA7D.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICEA7D.png" alt="그림입니다.
 원본 그림의 이름: CLP000010d082b2.bmp
 원본 그림의 크기: 가로 624pixel, 세로 367pixel" width="460" height="271" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 1 Rover 시스템 개요
@@ -1028,14 +1028,14 @@ div.HStyle14
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEA8D.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICEA8D.png" alt="그림입니다.
 원본 그림의 이름: 1.jpg
 원본 그림의 크기: 가로 960pixel, 세로 768pixel" width="255" height="204" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 2 로버의 상세설계 렌더링
 </P>
 &nbsp;</P>
 
-<P CLASS=HStyle0>&nbsp;<IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEACD.png" alt="그림입니다.
+<P CLASS=HStyle0>&nbsp;<IMG src="PICEACD.png" alt="그림입니다.
 원본 그림의 이름: CLP00001298b9d0.bmp
 원본 그림의 크기: 가로 623pixel, 세로 467pixel" width="266" height="199" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 3 실제 조립완료된 로버
@@ -1053,7 +1053,7 @@ div.HStyle14
 
 <P CLASS=HStyle3>나. <SPAN STYLE='font-family:"바탕"'>Satellite</SPAN></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEADD.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICEADD.png" alt="그림입니다.
 원본 그림의 이름: CLP000008f40003.bmp
 원본 그림의 크기: 가로 545pixel, 세로 458pixel" width="315" height="212" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 4 상세설계가 완료된 위성체의 모습
@@ -1068,7 +1068,7 @@ div.HStyle14
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEAFE.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICEAFE.png" alt="그림입니다.
 원본 그림의 이름: CLP000008f40002.bmp
 원본 그림의 크기: 가로 894pixel, 세로 441pixel" width="450" height="222" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 5 Satellite 시스템 개요
@@ -1127,7 +1127,7 @@ div.HStyle14
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEB1E.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICEB1E.png" alt="그림입니다.
 원본 그림의 이름: CLP000010d00001.bmp
 원본 그림의 크기: 가로 624pixel, 세로 370pixel" width="511" height="303" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 6 로버 시스템 구성도
@@ -1148,7 +1148,7 @@ div.HStyle14
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEB3E.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICEB3E.png" alt="그림입니다.
 원본 그림의 이름: CLP000012980001.bmp
 원본 그림의 크기: 가로 624pixel, 세로 274pixel" width="551" height="242" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 7 로버 시스템 전기시스템 인터페이스
@@ -1161,7 +1161,7 @@ div.HStyle14
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEB4F.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICEB4F.png" alt="그림입니다.
 원본 그림의 이름: CLP000012980002.bmp
 원본 그림의 크기: 가로 624pixel, 세로 493pixel" width="291" height="230" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 8 Rover의 개념설계
@@ -1446,7 +1446,7 @@ div.HStyle14
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEB5F.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICEB5F.png" alt="그림입니다.
 원본 그림의 이름: CLP000002600007.bmp
 원본 그림의 크기: 가로 579pixel, 세로 269pixel" width="542" height="252" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 9 Rover 시스템 구성
@@ -1467,7 +1467,7 @@ div.HStyle14
 
 <P CLASS=HStyle0>&nbsp;&nbsp;</P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEB7F.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICEB7F.png" alt="그림입니다.
 원본 그림의 이름: 3.jpg
 원본 그림의 크기: 가로 960pixel, 세로 768pixel" width="293" height="234" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 10 상세설계 상상도
@@ -1478,7 +1478,7 @@ div.HStyle14
 
 <P CLASS=HStyle4>1) <SPAN STYLE='font-family:"바탕"'>ADCS Board</SPAN></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEBEE.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICEBEE.png" alt="그림입니다.
 원본 그림의 이름: CLP000004947d89.bmp
 원본 그림의 크기: 가로 576pixel, 세로 571pixel" width="277" height="274" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 11 Rover ADCS 보드 PCB 
@@ -1487,7 +1487,7 @@ div.HStyle14
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0>&nbsp;&nbsp;&nbsp;<IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEBFE.png" alt="그림입니다.
+<P CLASS=HStyle0>&nbsp;&nbsp;&nbsp;<IMG src="PICEBFE.png" alt="그림입니다.
 원본 그림의 이름: CLP000004940003.bmp
 원본 그림의 크기: 가로 624pixel, 세로 313pixel" width="250" height="284" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 12 Rover ADCS 보드핀정의
@@ -1502,7 +1502,7 @@ div.HStyle14
 
 <P CLASS=HStyle4>2) <SPAN STYLE='font-family:"바탕"'>Main Board</SPAN></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEC1E.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICEC1E.png" alt="그림입니다.
 원본 그림의 이름: CLP000004940001.bmp
 원본 그림의 크기: 가로 624pixel, 세로 421pixel" width="233" height="346" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 13 Rover Main 보드 PCB 
@@ -1511,7 +1511,7 @@ div.HStyle14
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0>&nbsp;&nbsp;<IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEC3F.png" alt="그림입니다.
+<P CLASS=HStyle0>&nbsp;&nbsp;<IMG src="PICEC3F.png" alt="그림입니다.
 원본 그림의 이름: CLP000004940004.bmp
 원본 그림의 크기: 가로 624pixel, 세로 497pixel" width="249" height="308" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 14 Rover Main 보드핀정의 
@@ -1524,7 +1524,7 @@ div.HStyle14
 
 <P CLASS=HStyle4>3) <SPAN STYLE='font-family:"바탕"'>Power Distribution Board</SPAN></P>
 
-<P CLASS=HStyle0><SPAN STYLE='font-weight:"bold"'><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEC7E.png" alt="그림입니다.
+<P CLASS=HStyle0><SPAN STYLE='font-weight:"bold"'><IMG src="PICEC7E.png" alt="그림입니다.
 원본 그림의 이름: CLP000004940002.bmp
 원본 그림의 크기: 가로 624pixel, 세로 610pixel" width="279" height="273" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 15 Power Distribution Board
@@ -1533,7 +1533,7 @@ div.HStyle14
 
 <P CLASS=HStyle0><SPAN STYLE='font-weight:"bold"'><BR></SPAN></P>
 
-<P CLASS=HStyle0><SPAN STYLE='font-weight:"bold"'><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEC9E.png" alt="그림입니다.
+<P CLASS=HStyle0><SPAN STYLE='font-weight:"bold"'><IMG src="PICEC9E.png" alt="그림입니다.
 원본 그림의 이름: CLP000004940005.bmp
 원본 그림의 크기: 가로 283pixel, 세로 357pixel" width="211" height="266" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 16 PD 핀정의
@@ -1563,14 +1563,14 @@ div.HStyle14
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEC9F.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICEC9F.png" alt="그림입니다.
 원본 그림의 이름: CLP00000260000c.bmp
 원본 그림의 크기: 가로 331pixel, 세로 295pixel" width="242" height="215" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 17 System Stack의 모습
 </P>
 &nbsp;&nbsp;</P>
 
-<P CLASS=HStyle0>&nbsp;<IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICECB0.png" alt="그림입니다.
+<P CLASS=HStyle0>&nbsp;<IMG src="PICECB0.png" alt="그림입니다.
 원본 그림의 이름: CLP00000260000d.bmp
 원본 그림의 크기: 가로 333pixel, 세로 362pixel" width="173" height="188" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 18 System Stack 조립완료 모습
@@ -1583,7 +1583,7 @@ div.HStyle14
 
 <P CLASS=HStyle5>마) System Stack은 위성이 완전히 조립되지 않은 상태에서도 소프트웨어 검증을 할 수 있도록 설계</P>
 
-<P CLASS=HStyle0>.<IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICED1E.png" alt="그림입니다.
+<P CLASS=HStyle0>.<IMG src="PICED1E.png" alt="그림입니다.
 원본 그림의 이름: CLP00000260000b.bmp
 원본 그림의 크기: 가로 386pixel, 세로 266pixel" width="301" height="207" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 19 System Stack과 구조 조립 모습
@@ -1594,7 +1594,7 @@ div.HStyle14
 
 <P CLASS=HStyle4>2) <SPAN STYLE='font-family:"바탕"'>Main Board</SPAN></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICED2F.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICED2F.png" alt="그림입니다.
 원본 그림의 이름: CLP00000260000e.bmp
 원본 그림의 크기: 가로 455pixel, 세로 310pixel" width="356" height="243" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 20 위성 Mainboard 제작 완료 모습
@@ -1611,14 +1611,14 @@ div.HStyle14
 
 <P CLASS=HStyle5>라) 아래 그림은 PADS 9.5에서 설계한 Mainboard PCB의 Layout 과 Logic Schematic. </P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICED3F.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICED3F.png" alt="그림입니다.
 원본 그림의 이름: CLP00000260000f.bmp
 원본 그림의 크기: 가로 499pixel, 세로 382pixel" width="283" height="370" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 21 위성 Mainboard PCB(윗면)
 </P>
 &nbsp;</P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICED5F.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICED5F.png" alt="그림입니다.
 원본 그림의 이름: CLP000002600010.bmp
 원본 그림의 크기: 가로 496pixel, 세로 367pixel" width="273" height="369" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 22 위성 MainBoard PCB(아랫면)
@@ -1633,7 +1633,7 @@ div.HStyle14
 
 <P CLASS=HStyle0><SPAN STYLE='font-weight:"bold"'><BR></SPAN></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICED70.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICED70.png" alt="그림입니다.
 원본 그림의 이름: CLP000002600011.bmp
 원본 그림의 크기: 가로 461pixel, 세로 307pixel" width="408" height="272" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 23 위성 COMMS Board 제작 모습
@@ -1936,7 +1936,7 @@ div.HStyle14
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICED90.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICED90.png" alt="그림입니다.
 원본 그림의 이름: CLP000002600012.bmp
 원본 그림의 크기: 가로 403pixel, 세로 402pixel" width="265" height="265" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 24 위성 COMMS Board 제작 모습
@@ -2191,7 +2191,7 @@ div.HStyle14
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEDA1.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICEDA1.png" alt="그림입니다.
 원본 그림의 이름: 20140710_184558.jpg
 원본 그림의 크기: 가로 3264pixel, 세로 2448pixel
 사진 찍은 날짜: 2014년 07월 10일 오후 6:45
@@ -2214,7 +2214,7 @@ IOS 감도 : 200
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICEFC4.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICEFC4.png" alt="그림입니다.
 원본 그림의 이름: 20140713_145820.jpg
 원본 그림의 크기: 가로 3264pixel, 세로 2448pixel
 사진 찍은 날짜: 2014년 07월 13일 오후 2:58
@@ -2233,7 +2233,7 @@ IOS 감도 : 320
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0>&nbsp;<IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICF1B8.png" alt="그림입니다.
+<P CLASS=HStyle0>&nbsp;<IMG src="PICF1B8.png" alt="그림입니다.
 원본 그림의 이름: IMG_8981.JPG
 원본 그림의 크기: 가로 5184pixel, 세로 3456pixel
 사진 찍은 날짜: 2014년 08월 22일 오후 3:28
@@ -2257,7 +2257,7 @@ IOS 감도 : 100
 
 <P CLASS=HStyle0>&nbsp;</P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICF716.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICF716.png" alt="그림입니다.
 원본 그림의 이름: CLP000016d410f3.bmp
 원본 그림의 크기: 가로 918pixel, 세로 397pixel" width="512" height="221" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 28 위성 시스템 요약
@@ -2266,7 +2266,7 @@ IOS 감도 : 100
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICF736.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICF736.png" alt="그림입니다.
 원본 그림의 이름: CLP000016d40001.bmp
 원본 그림의 크기: 가로 770pixel, 세로 420pixel" width="514" height="273" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 29 로버 시스템 요약
@@ -2287,14 +2287,14 @@ IOS 감도 : 100
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICF747.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICF747.png" alt="그림입니다.
 원본 그림의 이름: CLP00000ea40005.bmp
 원본 그림의 크기: 가로 543pixel, 세로 383pixel" width="281" height="198" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 30 로버 주행경로
 </P>
 </P>
 
-<P CLASS=HStyle0>&nbsp;<IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICF767.png" alt="그림입니다.
+<P CLASS=HStyle0>&nbsp;<IMG src="PICF767.png" alt="그림입니다.
 원본 그림의 이름: CLP00000ea40006.bmp
 원본 그림의 크기: 가로 471pixel, 세로 347pixel" width="266" height="196" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 31 로버 주행경로 및 조향입력
@@ -2303,7 +2303,7 @@ IOS 감도 : 100
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICF778.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICF778.png" alt="그림입니다.
 원본 그림의 이름: P9111606.jpg
 원본 그림의 크기: 가로 4608pixel, 세로 3456pixel
 사진 찍은 날짜: 2014년 10월 01일 오후 11:23
@@ -2336,7 +2336,7 @@ IOS 감도 : 200
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICFD71.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICFD71.png" alt="그림입니다.
 원본 그림의 이름: CLP000002600008.bmp
 원본 그림의 크기: 가로 312pixel, 세로 358pixel" width="304" height="349" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 33 1차 발사 낙하 모습
@@ -2345,7 +2345,7 @@ IOS 감도 : 200
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICFD92.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICFD92.png" alt="그림입니다.
 원본 그림의 이름: CLP000002600009.bmp
 원본 그림의 크기: 가로 258pixel, 세로 360pixel" width="249" height="347" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 34 2차 발사 수신 데이터
@@ -2364,7 +2364,7 @@ IOS 감도 : 200
 
 <P CLASS=HStyle0><BR></P>
 
-<P CLASS=HStyle0><IMG src="file:///C:\Users\Dongho Kang\Dropbox\동아리\SNUSAT\Documents\ARLISS2014\SNUSAT Documentation\html\PICFDC1.png" alt="그림입니다.
+<P CLASS=HStyle0><IMG src="PICFDC1.png" alt="그림입니다.
 원본 그림의 이름: CLP00000260000a.bmp
 원본 그림의 크기: 가로 428pixel, 세로 232pixel" width="428" height="232" vspace="0" hspace="0" border="0">
 <P CLASS=HStyle0>그림 35 2차 발사 후 낙하 모습
