--- a/doc_arliss2014/doc_arliss2014.html
+++ b/doc_arliss2014/doc_arliss2014.html
@@ -111,11 +111,11 @@ div.HStyle14
 
 <P CLASS=HStyle3 STYLE='text-indent:10.0pt;'>나. 시스템의 개발목적</P>
 
-<P CLASS=HStyle4>● <SPAN STYLE='font-weight:"bold"'>ARLISS 2014 미션의 우수한 기록을 위해서 위성을 회수하여 빠른 시간내에 목표지점으로 운반할 수 있는 시스템의 개발.</SPAN></P>
+<P CLASS=HStyle4>- ARLISS 2014 미션의 우수한 기록을 위해서 위성을 회수하여 빠른 시간내에 목표지점으로 운반할 수 있는 시스템의 개발.</P>
 
-<P CLASS=HStyle4>● <SPAN STYLE='font-weight:"bold"'>외계행성 물류 보급 시스템을 모사한 Bring Back 시스템의 제안과 가능성을 검증. </SPAN></P>
+<P CLASS=HStyle4>- 외계행성 물류 보급 시스템을 모사한 Bring Back 시스템의 제안과 가능성을 검증.</P>
 
-<P CLASS=HStyle4>● <SPAN STYLE='font-weight:"bold"'>시스템 설계와 제작을 통한, 기계공학, 전기/전자 공학, 컴퓨터공학 지식의 활용과 시스템 설계 및 구현 경험</SPAN></P>
+<P CLASS=HStyle4>- 시스템 설계와 제작을 통한, 기계공학, 전기/전자 공학, 컴퓨터공학 지식의 활용과 시스템 설계 및 구현 경험</P>
 
 <P CLASS=HStyle3 STYLE='text-indent:10.0pt;'>다. Bring Back 미션을 기획한 것은, 로켓에 탑재할 수 있는 모양과 크기가 한정되어 있어, 위성체가 직접 목표지점으로 날아서 이동하는 경우(Fly Back), 충분한 바람이 불지 않아 동력이 부족한 경우 목표지점에 도달 하지 못할 수 있고, 위성체 자체에 바퀴를 달아 굴러서 이동하는 경우에는(Roll Back) 배터리 부족으로 중간에 멈춰서거나 모래 구덩이에 갇혀 이동 불능 상태가 될 수 있기 때문이다.</P>
 
