--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<ul>
 		<li>Documentation : 
 			<ul>
-				<li><a href="/arliss2014/doc_project.html">Documentation for ARLISS 2014 System</a>
+				<li><a href="/arliss2014/doc_project.html">Documentation for ARLISS 2014 System (in Korean)</a>
 				</li>
-				<li>Documentation for ARLISS 2014 Competition
+				<li>Documentation for ARLISS 2014 Competition (in Korea)
 				</li>
 			</ul>
 		</li>
