--- a/arliss2014/doc_project.html
+++ b/arliss2014/doc_project.html
@@ -20,11 +20,11 @@
 					div.HStyle1
 					{style-name:"본문";}
 					p.HStyle2
-					{style-name:"개요 1"; margin-top:0.0pt; margin-bottom:0.0pt; text-align:justify; text-indent:0.0pt; line-height:160%; font-size:10.0pt; font-family:함초롬바탕; letter-spacing:0; font-weight:"normal"; font-style:"normal"; color:#000000;}
+					{style-name:"개요 1"; margin-top:0.0pt; margin-bottom:0.0pt; text-align:justify; text-indent:0.0pt; line-height:160%; font-size:24.0pt; font-family:함초롬바탕; letter-spacing:0; font-weight:"normal"; font-style:"normal"; color:#000000;}
 					li.HStyle2
-					{style-name:"개요 1"; margin-top:0.0pt; margin-bottom:0.0pt; text-align:justify; text-indent:0.0pt; line-height:160%; font-size:10.0pt; font-family:함초롬바탕; letter-spacing:0; font-weight:"normal"; font-style:"normal"; color:#000000;}
+					{style-name:"개요 1"; margin-top:0.0pt; margin-bottom:0.0pt; text-align:justify; text-indent:0.0pt; line-height:160%; font-size:24.0pt; font-family:함초롬바탕; letter-spacing:0; font-weight:"normal"; font-style:"normal"; color:#000000;}
 					div.HStyle2
-					{style-name:"개요 1"; margin-top:0.0pt; margin-bottom:0.0pt; text-align:justify; text-indent:0.0pt; line-height:160%; font-size:10.0pt; font-family:함초롬바탕; letter-spacing:0; font-weight:"normal"; font-style:"normal"; color:#000000;}
+					{style-name:"개요 1"; margin-top:0.0pt; margin-bottom:0.0pt; text-align:justify; text-indent:0.0pt; line-height:160%; font-size:24.0pt; font-family:함초롬바탕; letter-spacing:0; font-weight:"normal"; font-style:"normal"; color:#000000;}
 					p.HStyle3
 					{style-name:"개요 2"; margin-left:20.0pt; margin-top:0.0pt; margin-bottom:0.0pt; text-align:justify; text-indent:0.0pt; line-height:160%; font-size:10.0pt; font-family:함초롬바탕; letter-spacing:0; font-weight:"normal"; font-style:"normal"; color:#000000;}
 					li.HStyle3
@@ -125,6 +125,8 @@
 			<P CLASS=HStyle3 STYLE='text-indent:10.0pt;'>라. 미래의 우주 식민지에 물류를 보급하는 가상의 상황을 모사하여 Bringback 임무 설정.&nbsp; 로버(Rover)와 위성체(Satellite)로 구성되어, 외계 행성에 보급품을 탑재하고 표면으로 낙하하는 위성체를 로버가 자율 주행하여 기지로 회수해오는 임무를 구현</P>
 
 			<P CLASS=HStyle3 STYLE='text-indent:10.0pt;'>마. Bring Back Mission은 움직이는 차가 로켓의 탑재용량 크기에 영향을 받지 않기 때문에 충분한 속도와 무게로 이동할 수 있음</P>
+
+			<P CLASS=HStyle0 STYLE='text-indent:10.0pt;'>&nbsp;</P>
 
 			<P CLASS=HStyle2 STYLE='margin-left:0.0pt;text-indent:10.0pt;'>2. 개발일정</P>
 
