--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>ARLISS 2014 - System Documentation</title>>
+
+	<link rel="apple-touch-icon" sizes="57x57" href="http://snusat.github.io/favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="http://snusat.github.io/favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="http://snusat.github.io/favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="http://snusat.github.io/favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="http://snusat.github.io/favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="http://snusat.github.io/favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="http://snusat.github.io/favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="http://snusat.github.io/favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="http://snusat.github.io/favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="http://snusat.github.io/favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="http://snusat.github.io/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="http://snusat.github.io/favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="http://snusat.github.io/favicon/favicon-16x16.png">
+	<link rel="manifest" href="http://snusat.github.io/favicon/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="http://snusat.github.io/favicon/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+</head>
+
 <body>
 	<h1>SNUSAT Project Documentation Page</h1>
 	<p>This page is for project documentation by Seoul National University Small Satellite team, SNUSAT.</p>
