--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ARLISS 2014 - System Documentation</title>>
+	<title>ARLISS 2014 - System Documentation</title>
 
 	<link rel="apple-touch-icon" sizes="57x57" href="http://snusat.github.io/favicon/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="http://snusat.github.io/favicon/apple-icon-60x60.png">
